--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
   justify-content: center;
   align-items: center;
-  background-color: #f3f4f6;
+  background-color: #20222f;
 }
 
 .auth-card {
@@ -11,23 +11,18 @@
   max-width: 900px;
   width: 100%;
   border-radius: 20px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  border: 2px solid #9999a2;
   overflow: hidden;
 }
 
-.auth-image-container {
-  display: none;
-}
-
 .auth-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  padding: 6em 0em 0em 4.9em;
+  width: 300px;
 }
 
 .auth-form-container {
   padding: 2rem;
-  background-color: white;
+  color: white;
   flex: 1;
 }
 
@@ -52,24 +47,29 @@
 }
 
 .auth-input-group input {
-  width: 100%;
+  width: 25rem;
   padding: 0.5rem;
-  border: 1px solid #ccc;
+  border: 1px solid #9999a252;
   border-radius: 5px;
+  background-color: #1e1f22;
+  color: white;
+  outline: none;
 }
 
 .auth-button {
-  width: 100%;
+  width: 26.1rem;
   padding: 0.75rem;
   background-color: #007bff;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .auth-button:hover {
-  background-color: #0056b3;
+  background-color: #5a72df;
+  transform: scale(1.01)
 }
 
 .auth-footer {
