--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,16 @@
 
 *{
     font-family: "Montserrat", sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
+.main{
+    margin-left: 250px;
+    padding: 0em 1em 0em 1em;
+    text-align: center;
+    background-color: #f4f9fa;
+    min-height: 100vh;
+    z-index: 0;
+    max-height: 100vh;
 }
