--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -107,37 +107,12 @@
 
 /* UNAUTHORIZED.JSX */
 
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background: #f8f9fa;
-}
-
-.content {
-  text-align: center;
-  background: #ffffff;
-  padding: 40px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.heading {
-  font-size: 4rem;
-  color: #dc3545;
-  margin: 0;
-}
-
-.message {
-  font-size: 1.25rem;
-  color: #6c757d;
-  margin: 20px 0;
-}
-
-.link {
-  font-size: 1rem;
+.development {
   color: #007bff;
-  text-decoration: none;
-  font-weight: bold;
 }
+
+.unauth-main{
+  padding-top: 10vh;
+}
+
+
