--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
     margin-left: 250px;
     padding: 0em 1em 0em 1em;
     text-align: center;
-    background-color: #f4f9fa;
+    background-color: #f7f9fc;
     min-height: 100vh;
     z-index: 0;
     max-height: 100vh;
