--- a/src/components/SurveyList/SurveyList.css
+++ b/src/components/SurveyList/SurveyList.css
@@ -7,17 +7,24 @@
     flex-direction: column;
     align-items: center;
 }
+
 .survey-card{
     display: flex;
     flex-direction: row;
     background-color: white;
-    min-width: 600px;
-    max-width: 70vw ;
-    justify-content: space-between;
-    padding: 1em 2em 1em 2rem;
+    min-width: 900px;
+    max-width: 80vw ;
+    justify-content: center;
+    padding: 1em 1.6em 1em 0em;
     margin-top: 10px;
-    box-shadow: 0 0 1px black;
+    box-shadow: 0 0 2px #c7c7c7;
+    border-radius: 5px;
+    transition: transform 0.3s ease;
+}
 
+.survey-card:hover{
+    cursor: pointer;
+    transform: scale(1.01)
 }
 
 .survey-info{
@@ -26,4 +33,25 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+}
+
+.s-options{
+    width: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.statusinfo{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.statusinfo h3{
+    font-size: 12px;
+}
+
+.statusinfo p{
+    font-size: 15px;
 }
