--- a/src/components/SurveyList/SurveyList.css
+++ b/src/components/SurveyList/SurveyList.css
@@ -12,10 +12,10 @@
     display: flex;
     flex-direction: row;
     background-color: white;
-    min-width: 900px;
-    max-width: 80vw ;
+    width: 70vw ;
+    height: 50px;
     justify-content: center;
-    padding: 1em 1.6em 1em 0em;
+    padding: 1em 4em 1em 0em;
     margin-top: 10px;
     box-shadow: 0 0 2px #c7c7c7;
     border-radius: 5px;
@@ -32,14 +32,28 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    padding: 0em 5em 0em 5em;
+    text-align: start;
+}
+
+.survey-info p{
+    min-width: 50%;
+    text-align: start;
+}
+
+.survey-info h2{
+    min-width: 50%;
+    text-align: start;
+    margin-right: 10px;
 }
 
 .s-options{
-    width: 100px;
+    width: 200px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .statusinfo{
