--- a/src/components/SurveyList/SurveyList.css
+++ b/src/components/SurveyList/SurveyList.css
@@ -19,15 +19,16 @@
     margin-top: 10px;
     box-shadow: 0 0 2px #c7c7c7;
     border-radius: 5px;
-    transition: transform 0.3s ease;
+    transition: box-shadow 0.1s ease;
 }
 
 .survey-card:hover{
     cursor: pointer;
-    transform: scale(1.01)
+    box-shadow: 0 0 3px #9e9e9e;
 }
 
 .survey-info{
+    z-index: 10;
     width: 80%;
     display: flex;
     flex-direction: row;
@@ -73,4 +74,23 @@
 .ant-modal-wrap{
     margin-left: 250px;
 
+}
+
+.post_but{
+    padding: 0.6em 0 10% 45%;
+    position: absolute;
+    z-index: 11;
+    display: flex;
+    align-items: center;
+}
+
+.ant-card-body{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+}
+
+.font-medium{
+    margin-right: 1em;
 }
